'a feed'→'feeds' in index wording.

--- a/br_rss/boilerroomtv/templates/index.html
+++ b/br_rss/boilerroomtv/templates/index.html
@@ -38,7 +38,7 @@
 
 
     <main>
-        <p>Boiler Room has an app but doesn't provide good ol' RSS, so here's a feed for your favourite podcasts app:</p>
+        <p>Boiler Room has an app but doesn't provide good ol' RSS, so here's a few feeds for your favourite podcasts app:</p>
 
         <a rel="alternate" type="application/rss+xml" href="{% url 'rss' %}">All Recordings</a>
 
