Replace link protocols after DOM ready.

--- a/br_rss/boilerroomtv/templates/index.html
+++ b/br_rss/boilerroomtv/templates/index.html
@@ -41,10 +41,12 @@
         }
     </style>
     <script>
-        let is_iOS = navigator.userAgent.match(/(iPad|iPhone|iPod)/i) != null;
-        if (is_iOS) {
-            for (a in document.getElementsByTagName('a')) {
-                a.href.replace('itpc://', 'feed://');
+        document.addEventListener("DOMContentLoaded", function() {
+            let is_iOS = navigator.userAgent.match(/(iPad|iPhone|iPod)/i) !== null;
+            if (is_iOS) {
+                for (a in document.getElementsByTagName('a')) {
+                    a.href.replace('itpc://', 'feed://');
+                }
             }
         }
     </script>
