Align BR logo vertically on homepage.

--- a/br_rss/boilerroomtv/templates/index.html
+++ b/br_rss/boilerroomtv/templates/index.html
@@ -34,7 +34,7 @@
     <style>
         header img {
             height: 2.4em;
-            display: block;
+            vertical-align: -75%;
         }
         main img {
             height: 1.2em;
